force-app/main/default/objects/IbdEncumbrance__e.object
<CustomObject>
    <description>Inbound encumbrance records</description>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExclusionCourseGroup__c</fullName>
        <label>ExclusionCourseGroup</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExclusionStartDate__c</fullName>
        <label>ExclusionStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PERSON_ID__c</fullName>
        <label>PERSON ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authPersonId__c</fullName>
        <label>authPersonId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>authorisedBy__c</fullName>
        <label>authorisedBy</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectCourseCode__c</fullName>
        <label>effectCourseCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectDescription__c</fullName>
        <label>effectDescription</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectExpiryDate__c</fullName>
        <label>effectExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>effectResAttType__c</fullName>
        <label>effectResAttType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectResEnrolCp__c</fullName>
        <label>effectResEnrolCp</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>effectSequenceNumber__c</fullName>
        <label>effectSequenceNumber</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectStartDate__c</fullName>
        <label>effectStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>effectTypeApplyToCourseInd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>effectTypeApplyToCourseInd</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>effectType__c</fullName>
        <label>effectType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effectUpdateOn__c</fullName>
        <label>effectUpdateOn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>effectUpdateWho__c</fullName>
        <label>effectUpdateWho</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>encumbranceComments__c</fullName>
        <label>encumbranceComments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>encumbranceDescription__c</fullName>
        <label>encumbranceDescription</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>encumbranceEffectUniqueKey__c</fullName>
        <label>encumbranceEffectUniqueKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>encumbranceExpiryDate__c</fullName>
        <label>encumbranceExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>encumbranceLevel__c</fullName>
        <label>encumbranceLevel</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>encumbranceStartDate__c</fullName>
        <label>encumbranceStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>encumbranceTypeGeneralInfo__c</fullName>
        <label>encumbranceTypeGeneralInfo</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>encumbranceType__c</fullName>
        <label>encumbranceType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>encumbranceUniqueKey__c</fullName>
        <label>encumbranceUniqueKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiryAuthPersonId__c</fullName>
        <label>expiryAuthPersonId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>expiryAuthorisedBy__c</fullName>
        <label>expiryAuthorisedBy</label>
        <length>71</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>financialIndicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>penUpdateOn__c</fullName>
        <label>penUpdateOn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>penUpdateWho__c</fullName>
        <label>penUpdateWho</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sEncumbranceCat__c</fullName>
        <label>sEncumbranceCat</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spoCourseCode__c</fullName>
        <label>spoCourseCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>spoSeqNumber__c</fullName>
        <label>spoSeqNumber</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Inbound Encumbrance</label>
    <pluralLabel>Inbound Encumbrances</pluralLabel>
</CustomObject>